--- a/01_volumes/index.html
+++ b/01_volumes/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-    <title>Docker-Einführung</title>
-</head>
-<body>
-    <h1>Hello IHUB-Docker-Fans!</h1>
-</body>
+    <head>
+        <title>Docker session</title>
+    </head>
+    <body>
+        <h1>Hello docker fans</h1>
+        <p>ihub</p>
+    </body>
+ 
 </html>
